--- a/analysis/06_runTimeComparison.Rmd
+++ b/analysis/06_runTimeComparison.Rmd
@@ -119,10 +119,22 @@ if(!file.exists(inFile)){
         timing <- bind_rows(timing, log)
         
         cellType <- names(tfit$contrasts[,i])[tfit$contrasts[,i] != 0]
-        tic("champ.ebgsea")
-        ebgs <- champ.ebGSEA(beta = mVals[,targets$CellType %in% cellType],
-                             pheno = targets$CellType[targets$CellType %in% cellType],
-                             minN = 5, adjPval=1, arraytype = "EPIC")
+        tic("ebgsea")
+        #tic("champ.ebgsea")
+        # ebgs <- champ.ebGSEA(beta = mVals[,targets$CellType %in% cellType],
+        #                      pheno = targets$CellType[targets$CellType %in% cellType],
+        #                      minN = 5, adjPval=1, arraytype = "EPIC")
+        groups <- names(tfit$contrasts[,i])[tfit$contrasts[,i] != 0]
+        samps <- as.logical(unname(rowSums(tfit$design[,groups])))
+        pheno <- unname(tfit$design[samps, groups][,1])
+        
+        gtRanks <- doGT(pheno.v = pheno,
+                        data.m = bVals[, samps],
+                        array = "EPIC",
+                        ncores = 1)
+        ebgs <- data.frame(doGSEAwt(rankEID.m = gtRanks, ptw.ls = collection,
+                                    ncores = 1, minN = minsize, adjPVth = 1)$`Rank(P)`)
+        
         toc(log = TRUE, quiet = TRUE)
         tmp <- strsplit2(tic.log(format = TRUE)[[1]], " ")
         log <- data.frame(method = gsub(":", "", tmp[1]), time = tmp[2], 
