--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -55,12 +55,8 @@ Analysis
     a) [Generate a blood cell RNAseq "truth" set](04_expressionGenesets.html)
     Analyse an RNAseq sorted blood cell dataset and identify the top ranked 
     gene sets for each cell type comparison.
-
-    b) [Generate a breast cancer cell-line RNAseq "truth" set](04_expressionGenesetsCellLines.html)
-    Analyse an RNAseq breast cancer cell-line dataset and identify the top ranked 
-    gene sets for each cell type comparison.
     
-    c) [Generate a uterine fibroid RNAseq "truth" set](04_expressionGenesetsFibroid.html)
+    b) [Generate a uterine fibroid RNAseq "truth" set](04_expressionGenesetsFibroid.html)
     Analyse an RNAseq normal and fibroid uterine tissue dataset and identify the top ranked 
     gene sets for each tissue comparison.
          
@@ -69,13 +65,8 @@ Analysis
     Analyse an EPIC array sorted blood cell dataset using various gene set 
     testing methods. Compare how well the different methods perform using several 
     metrics.
-
-    b) [Compare performance of different methods](05_compareMethodsCellLines.html)
-    Analyse an EPIC array breast cancer cell-line dataset using various gene set 
-    testing methods. Compare how well the different methods perform using several 
-    metrics.
          
-    c) [Compare performance of different methods](05_compareMethodsFibroid.html)
+    b) [Compare performance of different methods](05_compareMethodsFibroid.html)
     Analyse an EPIC array normal and fibroid uterine tissue dataset using various gene set 
     testing methods. Compare how well the different methods perform using several 
     metrics.
