--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -56,7 +56,7 @@ Analysis
     Analyse an RNAseq sorted blood cell dataset and identify the top ranked 
     gene sets for each cell type comparison.
     
-    b) [Generate a uterine fibroid RNAseq "truth" set](04_expressionGenesetsFibroid.html)
+    b) [Generate a breast cancer cell line RNAseq "truth" set](04_expressionGenesetsFibroid.html)
     Analyse an RNAseq breast cancer cell line data and identify the top ranked 
     gene sets for each comparison.
     
